Switching enum approach to be more basic
